--- a/licenseview/src/main/res/layout/com_pcchin_licenseview_ubei678ejq58i89v7qep.xml
+++ b/licenseview/src/main/res/layout/com_pcchin_licenseview_ubei678ejq58i89v7qep.xml
@@ -15,6 +15,9 @@
   ~ limitations under the License.
   -->
 
+<!-- As resources in libraries are combined with those of the main program, a completely unique
+name is needed to prevent collision. -->
+<!-- This is the main display layout of the view. -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ld"
     android:layout_width="match_parent"
